# perp-scrypto

./: .gitignore  Cargo.toml  LICENSE  README.md  fee_order.json  fee_process.json  rust-toolchain.toml
account/: Cargo.toml
account/src/: lib.rs  margin_account.rs
account/src/margin_account/: consts.rs  errors.rs  structs.rs
common/: Cargo.toml  build.rs
common/src/: consts.rs  d_float.rs  hash_list.rs  lib.rs  list.rs
config/: Cargo.toml
config/src/: config.rs
deploy/: .gitignore  0_deploy.py  0_mint_test_tokens.py  10T_create_margin_account.py  10_margin_order_request.py  10_remove_collateral_request.py  11T_add_collateral.py  12T_margin_order_request.py  13T_remove_collateral_request.py  1_add_pair.py  1_add_pairs.py  1_deploy_exchange.py  1_enable_xrd_wrapping.py  2_dapp_definition.py  2_enable_usd_wrapping.py  2_enable_usdc_wrapping.py  2_enable_xrd_wrapping.py  2_pairs_configs.py  3_collateral_configs.py  3_enable_usdc_wrapping.py  3_pairs_configs.py  3_wrap_xrd.py  4_add_liquidity.py  4_collateral_configs.py  4_exchange_config.py  4_pairs_configs.py  4_wrap_xrd.py  5_add_liquidity.py  5_create_margin_account.py  5_pairs_configs.py  5_wrap_usd_to_susd.py  5_wrap_usdc_to_susd.py  5_wrap_xrd.py  6_add_collateral.py  6_add_liquidity.py  6_collateral_configs.py  6_create_margin_account.py  7T_wrap_usdc_to_susd.py  7_add_collateral.py  7_create_margin_account.py  (+41 more)
deploy/tools/: accounts.py  gateway.py  manifests.py  price_feeds.py
env_registry/: Cargo.toml
env_registry/src/: env_registry.rs  lib.rs
exchange/: Cargo.toml  build.rs
exchange/src/: authority.rs  exchange.rs  lib.rs
exchange/src/exchange/: config.rs  consts.rs  errors.rs  events.rs  keeper_request.rs  keeper_requests.rs  liquidity_pool.rs  margin_account.rs  oracle.rs  requests.rs  results.rs  structs.rs  virtual_config.rs  virtual_liquidity_pool.rs  virtual_margin_account.rs  virtual_margin_pool.rs  virtual_oracle.rs
exchange/src/exchange/liquidity_pool/: pool_position.rs
exchange/src/exchange/margin_account/: account_position.rs
exchange/src/utils/: list.rs  math.rs  mod.rs  pair.rs  vaults.rs
exchange/tests/: lib.rs  test_add_collateral.rs  test_add_liquidity.rs  test_auto_deleverage.rs  test_cancel_request.rs  test_cancel_requests.rs  test_collect_referral_rewards.rs  test_create_account.rs  test_create_referral_codes.rs  test_create_referral_codes_from_allocation.rs  test_liquidate.rs  test_liquidate_to_margin.rs  test_liquidate_v2.rs  test_margin_order.rs  test_margin_order_request.rs  test_margin_order_tp_sl_request.rs  test_process_request.rs  test_remove_collateral.rs  test_remove_collateral_request.rs  test_remove_liquidity.rs  test_set_level_auth.rs  test_swap_debt.rs  test_swap_protocol_fee.rs  test_update_pairs.rs
exchange/tests/common/: components.rs  exchange.rs  exchange_interface.rs  mod.rs  resources.rs  utils.rs
exchange/tests/compiled/: account.rpd  account.wasm  config.rpd  config.wasm  exchange.rpd  exchange.wasm  fee_delegator.rpd  fee_delegator.wasm  fee_distributor.rpd  fee_distributor.wasm  oracle.rpd  oracle.wasm  permission_registry.rpd  permission_registry.wasm  pool.rpd  pool.wasm  referral_generator.rpd  referral_generator.wasm  token_wrapper.rpd  token_wrapper.wasm
exchange/tests/tests_common/: components.rs  exchange_interface.rs  mod.rs  resources.rs  setup.rs  utils.rs
faucet/: Cargo.toml
faucet/src/: lib.rs
fee_delegator/: Cargo.toml
fee_delegator/src/: fee_delegator.rs  lib.rs
fee_distributor/: Cargo.toml
fee_distributor/src/: fee_distributor.rs  lib.rs
oracle/: Cargo.toml  encode_prices.py
oracle/src/: lib.rs  oracle.rs
oracle/tests/: lib.rs
permission_registry/: Cargo.toml
permission_registry/src/: lib.rs  permission_registry.rs
pool/: Cargo.toml
pool/src/: lib.rs  margin_pool.rs
referral_generator/: Cargo.toml
referral_generator/src/: lib.rs  referral_generator.rs
referrals/: Cargo.toml
referrals/src/: lib.rs  referrals.rs
registry/: Cargo.toml
registry/src/: registry.rs
releases/: account_2024031911.rpd  account_2024031911.wasm  exchange_2024031911.rpd  exchange_2024031911.wasm  oracle_2024031911.rpd  oracle_2024031911.wasm  pool_2024031911.rpd  pool_2024031911.wasm  referrals_2024031911.rpd  referrals_2024031911.wasm  token_wrapper_2024031911.rpd  token_wrapper_2024031911.wasm
releases/2024032110_stokenet/: account.rpd  account.wasm  pool.rpd  pool.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032111_stokenet/: config.json  exchange.rpd  exchange.wasm  oracle.rpd  oracle.wasm  referrals.rpd  referrals.wasm
releases/2024032209_stokenet/: account.rpd  config.json  exchange.rpd  exchange.wasm  pool.rpd  pool.wasm  referrals.rpd  referrals.wasm  token_wrapper.rpd
releases/2024032210_stokenet/: account.wasm  config.json  exchange.rpd  exchange.wasm  oracle.rpd  oracle.wasm  token_wrapper.wasm
releases/2024032211_stokenet/: account.rpd  account.wasm  config.json  exchange.rpd  exchange.wasm  pool.rpd  pool.wasm  referrals.rpd  referrals.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032710_stokenet/: account.rpd  account.wasm  config.json  config.rpd  config.wasm  exchange.rpd  exchange.wasm  pool.rpd  pool.wasm  referrals.rpd  referrals.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032803_stokenet/: config.rpd  config.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032804_stokenet/: account.rpd  account.wasm  config.json  config.rpd  config.wasm  exchange.rpd  exchange.wasm  oracle.wasm  pool.rpd  pool.wasm  referrals.rpd  referrals.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032905_stokenet/: account.rpd  account.wasm  config.rpd  config.wasm  token_wrapper.rpd  token_wrapper.wasm
releases/2024032906_stokenet/: config.json  exchange.rpd  exchange.wasm  fee_delegator.rpd  fee_delegator.wasm  oracle.wasm  pool.rpd  pool.wasm  referrals.rpd  referrals.wasm
token_wrapper/: Cargo.toml
token_wrapper_2/: Cargo.toml
utils/: Cargo.toml  build.rs
utils/src/: consts.rs  hash_list.rs  lib.rs  list.rs  math.rs  vaults.rs
(+589 files in other folders)
