[package]
name = "account"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
scrypto = { path = "../radixdlt-scrypto/scrypto" }
common = { path = "../common" }

[dev-dependencies]
scrypto-test = { path = "../radixdlt-scrypto/scrypto-test" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace