[package]
build = "build.rs"
name = "exchange"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
common = { path = "../common" }
account = { path = "../account" }
config = { path = "../config" }
pool = { path = "../pool" }
referral_generator = { path = "../referral_generator" }
permission_registry = { path = "../permission_registry" }

[build-dependencies]
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
regex = "1.5.4"

[dev-dependencies]
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspace
# Remove this [workspace] section if you intend the package to be part of a Cargo workspace